[gd_scene load_steps=4 format=3 uid="uid://dae51v73qsb2v"]

[ext_resource type="Script" path="res://Escenas/final_neutral.gd" id="1_6mvx6"]
[ext_resource type="VideoStream" path="res://Assets/Finales/Final-Neutral.ogv" id="1_a8hr3"]
[ext_resource type="Texture2D" uid="uid://dbn1u4aom1grk" path="res://Assets/Finales/LoopNutro.jpeg" id="2_own1x"]

[node name="FinalNeutral" type="Node2D"]
script = ExtResource("1_6mvx6")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = -252.0
offset_top = -78.0
offset_right = 1323.0
offset_bottom = 765.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="Control"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 653.0
stream = ExtResource("1_a8hr3")
autoplay = true
expand = true
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 2.0
offset_right = 1109.0
offset_bottom = 608.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_own1x")
expand_mode = 1

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 964.0
offset_top = 550.0
offset_right = 1128.0
offset_bottom = 620.0
text = "MENU"

[connection signal="finished" from="Control/VideoStreamPlayer" to="." method="_on_video_stream_player_finished"]
[connection signal="pressed" from="Control/Button" to="." method="_on_button_pressed"]
